# tradingbot22-tradingbots

./: .gitignore  Dockerfile  README.md  buildPush.sh  pyproject.toml
analyst-rating-simple/: Dockerfile  buildPush.sh
decision-tree-bot/: Dockerfile  act.py  basebot.py  docker-compose.yaml  requirements.txt  run.sh  tmpcode.py  train.py
decision-tree-v2/: Dockerfile  README.md  buildPush.sh  decisiontreev2.py  requirements.txt
earnings-calendar-effect/: Dockerfile  README.md  earningscalbot.py
finnhub_recommendations/: Dockerfile  basebot.py  docker-compose.yaml  finny.py  requirements.txt
jupyternotebooks/: composer-buythedrip.ipynb  composer-oppy.ipynb  composer.ipynb  correlating-paris.ipynb  correlations.ipynb  decision-tree-tradingbot.ipynb  delayed_corrleations.ipynb  earnings-calendar.ipynb  earnings_results.json  finnub_recomm.ipynb  lstm_earnings.ipynb  news-sentiment.ipynb  signalsmoothing.ipynb  simple-sma.ipynb  statsforecast.ipynb  support-resistance.ipynb  xgb_7day_predictor.ipynb  xgb_vs_lightgbm.ipynb
kubernetes/: breakout-bot.yaml  composer-bigtechmomentum-v1.yaml  composer-boring-v1.yaml  composer-buydipsqqq-original.yaml  composer-buydipsqqq-shorting-adapted.yaml  composer-buydipsqqq-shorting-explored.yaml  composer-buydipsqqq-shorting-gettrend.yaml  composer-buydipsqqq-shorting.yaml  composer-oppy-commodmom.yaml  composer-oppy-effcore.yaml  composer-oppy-largecapval.yaml  composer-oppy-oppy.yaml  composer-oppy-sectormom.yaml  composer-oppy-volhedge.yaml  decision-tree-v2.yaml  decisiontreebot.yaml  earnings-calendar-bot.yaml  randombot.yaml  (+12 more)
(+119 files in other folders)
